--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,19 +1,49 @@
 {% if page.author_profile or layout.author_profile or page.sidebar %}
-  <div class="sidebar sticky">
+<div class="sidebar sticky">
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
   {% if page.sidebar %}
-    {% for s in page.sidebar %}
-      {% if s.image %}
-        <img src="{{ s.image | relative_url }}"
-             alt="{% if s.image_alt %}{{ s.image_alt }}{% endif %}">
-      {% endif %}
-      {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
-      {% if s.text %}{{ s.text | markdownify }}{% endif %}
-      {% if s.nav %}{% include nav_list nav=s.nav %}{% endif %}
-    {% endfor %}
-    {% if page.sidebar.nav %}
-      {% include nav_list nav=page.sidebar.nav %}
-    {% endif %}
+  {% for s in page.sidebar %}
+  {% if s.image %}
+  <img src="{{ s.image | relative_url }}" alt="{% if s.image_alt %}{{ s.image_alt }}{% endif %}">
   {% endif %}
-  </div>
+  {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
+  {% if s.text %}{{ s.text | markdownify }}{% endif %}
+  {% if s.nav %}{% include nav_list nav=s.nav %}{% endif %}
+  {% endfor %}
+  {% if page.sidebar.nav %}
+  {% include nav_list nav=page.sidebar.nav %}
+  {% endif %}
+  {% endif %}
+
+  <!-- 카테고리 파트 -->
+  <!--전체 글 수를 세기 위한 연산. sum 변수에 전체 글 수 저장-->
+  {% assign sum = site.posts | size %}
+  <nav class="nav__list" style="margin-top:2rem;">
+    <input id="ac-toc" name="accordion-toc" type="checkbox" />
+    <label for="ac-toc">{{ site.data.ui-text[site.locale].menu_label }}</label>
+    <ul class="nav__items" id="category_tag_menu">
+      <!--1. 전체 글 수-->
+      <li>
+        📂 <span>전체 글 수 : {{sum}}개</span>
+      </li>
+
+      <!-- 2. 카테고리 영역 시작 -->
+      <li>
+        <!--여기가 카테고리 대분류 -->
+        <span class="nav__sub-title">테스트카테고링(대)</span>
+        <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열 여기가 소분류-->
+        <ul>
+          <!-- 카테고리 글들을 모아둔 페이지인 /categories/(카테고리 대분류) 주소의 글로 링크 연결-->
+          <!--category[1].size 로 해당 카테고리를 가진 글의 개수 표시-->
+          {% for category in site.categories %}
+          {% if category[0] == "Test" %}
+          <li><a href="/categories/test" class="">테스트카테고리(소1) ({{category[1].size}})</a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+      </li>
+    </ul>
+  </nav>
+
+</div>
 {% endif %}
