--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,20 +16,22 @@
   {% endif %}
 
   <!-- 카테고리 파트 -->
+  {% if page.sidebar_main %}
   <!--전체 글 수를 세기 위한 연산. sum 변수에 전체 글 수 저장-->
   {% assign sum = site.posts | size %}
   <nav class="nav__list" style="margin-top:2rem;">
     <input id="ac-toc" name="accordion-toc" type="checkbox" />
     <label for="ac-toc">{{ site.data.ui-text[site.locale].menu_label }}</label>
     <ul class="nav__items" id="category_tag_menu">
-      <!--1. 전체 글 수-->
+      <!--전체 글 수-->
       <li>
         📂 <span>전체 글 수 : {{sum}}개</span>
       </li>
 
-      <!-- 2. 카테고리 영역 시작 -->
+      <!-- 카테고리 영역 시작 -->
       <li>
         <!--여기가 카테고리 대분류 -->
+        <!-- 1. 테스트 카테고리 -->
         <span class="nav__sub-title">테스트카테고링(대)</span>
         <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열 여기가 소분류-->
         <ul>
@@ -41,9 +43,20 @@
           {% endif %}
           {% endfor %}
         </ul>
+
+        <!-- 2. 프로그래머스 카테고리 -->
+        <span class="nav__sub-title">코딩테스트</span>
+        <ul>
+          {% for category in site.categories %}
+          {% if category[0] == "Programmers" %}
+          <li><a href="/categories/programmers" class="">프로그래머스 ({{category[1].size}})</a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
       </li>
     </ul>
   </nav>
+  {% endif %}
 
 </div>
 {% endif %}
