--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,7 +19,11 @@ layout: default
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <h1 id="page-title" class="page__title">{{ page.title }}</h1>
+    <!-- 여기는 카테고리클릭시 나오는 post 아카이브 제목 -->
+      <h1 id="page-title" class="page__title" style="padding:0.6rem 0 0.6rem 0; color:rgb(214, 180, 238); ">
+        {{ page.title }}
+      </h1>
+      <hr>
     {% endunless %}
     {{ content }}
   </div>
