--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,12 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+<!-- 홈에있는 최근 게시물-->
+<h3 class="archive__subtitle" style="font-size:1.6rem; padding:0.2rem 0 0.2rem 0; color:rgb(214, 180, 238); ">
+  {{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}
+</h3>
+
+<hr>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
