style : 커스텀 테마 변경

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -19,10 +19,10 @@
       </div>
     {% endif %}
 
-    <h2 class="archive__item-title no_toc" itemprop="headline">
+    <h2 class="archive__item-title no_toc" style='margin-top:3.5rem;' itemprop="headline">
       <!-- 포스트 제목-->
       {% if post.link %}
-        <a href="{{ post.link }}" style="font-size:1.1rem;">{{ title }}</a> 
+        <b><a href="{{ post.link }}" style="font-size:1.1rem;">{{ title }}</a> </b>
         <a href="{{ post.url | relative_url }}" rel="permalink">
           <i class="fas fa-link" aria-hidden="true" title="permalink"></i>
           <span class="sr-only">Permalink</span>
@@ -41,8 +41,8 @@
     {% include page__meta.html type=include.type %}
     -->
     
-    <!-- 부가설명 필요없어
+    <!-- 부가설명 필요없어-->
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
-      -->
+      
   </article>
 </div>
