--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,14 +25,35 @@
     <ul class="nav__items" id="category_tag_menu">
       <!--전체 글 수-->
       <li>
-        📂 <span style="font-size:0.8rem;">전체 글 수 <span style="font-size:1.2rem; color : rgb(203, 164, 230);">{{sum}}</span> 개</span>
+        📂 <b><span style="font-size:0.8rem;">전체 글 수 <span style="font-size:1.2rem; color : rgb(15, 123, 108);">{{sum}}</span> 개</span></b>
       </li>
 
       <!-- 카테고리 영역 시작 -->
       <li>
         <!--여기가 카테고리 대분류 -->
 
-        <!-- 1. 프로젝트 카테고리 -->
+        <!-- 교육 카테고리 -->
+        <span class="nav__sub-title">교육</span>
+        <ul>
+        </ul>
+
+        <!-- 코딩테스트 카테고리 -->
+        <span class="nav__sub-title">코딩테스트</span>
+        <ul>
+          {% for category in site.categories %}
+          {% if category[0] == "Programmers" %}
+          <li><a href="/categories/programmers" class="nav__sub-title_sub">프로그래머스 ({{category[1].size}})</a></li>
+          {% endif %}
+          {% endfor %}
+
+          {% for category in site.categories %}
+          {% if category[0] == "BOJ" %}
+          <li><a href="/categories/BOJ" class="nav__sub-title_sub">BOJ ({{category[1].size}})</a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+
+        <!-- 프로젝트 카테고리 -->
         <span class="nav__sub-title">프로젝트</span>
         <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열 여기가 소분류-->
         <ul>
@@ -45,15 +66,7 @@
           {% endfor %}
         </ul>
 
-        <!-- 2. 프로그래머스 카테고리 -->
-        <span class="nav__sub-title">코딩테스트</span>
-        <ul>
-          {% for category in site.categories %}
-          {% if category[0] == "Programmers" %}
-          <li><a href="/categories/programmers" class="nav__sub-title_sub">프로그래머스 ({{category[1].size}})</a></li>
-          {% endif %}
-          {% endfor %}
-        </ul>
+        
 
         <!-- 기타등등 카테고리 
         <span class="nav__sub-title">기타등등</span>
