--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: archive
 {{ content }}
 
 <!-- 홈에있는 최근 게시물-->
-<h3 class="archive__subtitle" style="font-size:1.6rem; padding:0.2rem 0 0.2rem 0; color:rgb(214, 180, 238); ">
+<h3 class="archive__subtitle" style="font-size:1.6rem; padding:0.2rem 0 0.2rem 0; ">
   {{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}
 </h3>
 
