--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -5,24 +5,33 @@
 /* Colors */
 $text-color: #000 !default;
 $muted-text-color: $text-color !default;
-$primary-color: #ff0000 !default;
+$primary-color: rgb(15, 123, 108) !default;
 $border-color: mix(#fff, $text-color, 75%) !default;
-$footer-background-color: #000 !default;
-$link-color: #0000ff !default;
-$masthead-link-color: $text-color !default;
+$link-color: rgb(15, 123, 108) !default;
+$masthead-link-color: rgb(15, 123, 108) ;
 $masthead-link-color-hover: $text-color !default;
-$navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
+$navicon-link-color-hover: rgb(15, 123, 108);
+
+/* 푸터 배경색*/
+$footer-background-color: rgb(77, 77, 77);
+/* `` 코드 배경 */
+$code-background-color: rgb(233, 233, 233);
+
+
 
 /* contrast syntax highlighting (base16) */
-$base00: #000000 !default;
+/* ``` 주석 배경 */
+$base00: rgb(32, 46, 44) !default;
+/* ``` 폰트 색 */
+$base05: rgb(224, 224, 224) !default;
+
 $base01: #242422 !default;
 $base02: #484844 !default;
 $base03: #6c6c66 !default;
 $base04: #918f88 !default;
-$base05: #b5b3aa !default;
 $base06: #d9d7cc !default;
 $base07: #fdfbee !default;
-$base08: #ff6c60 !default;
+$base08: #020202 !default;
 $base09: #e9c062 !default;
 $base0a: #ffffb6 !default;
 $base0b: #a8ff60 !default;
