--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -74,7 +74,7 @@ layout: default
           </span>
         </span>
 
-        <hr style="margin-top:0.4rem">
+        <hr style="margin-top:0.4rem; margin-bottom:2.5rem;">
         {% endif %}
        
         <!-- 안씀
