--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -31,7 +31,7 @@ $base03: #6c6c66 !default;
 $base04: #918f88 !default;
 $base06: #d9d7cc !default;
 $base07: #fdfbee !default;
-$base08: #020202 !default;
+$base08: rgb(224, 224, 224) !default;
 $base09: #e9c062 !default;
 $base0a: #ffffb6 !default;
 $base0b: #a8ff60 !default;
