--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -52,6 +52,8 @@
       <li><a href="#" class="disabled">&hellip;</a></li>
     {% endif %}
 
+
+    <!-- 하단에 몇 페이지인지 나오는곳 -->
     {% if paginator.page == paginator.total_pages %}
       <li><a href="#" class="disabled current">{{ paginator.page }}</a></li>
     {% else %}
