--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -506,6 +506,10 @@
   font-size: 0.8rem;
 }
 
+.nav__sub-title_sub:hover{
+  font-weight: bold;
+}
+
 /*
      Table of contents navigation
      ========================================================================== */
