--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,8 @@
     <ul class="nav__items" id="category_tag_menu">
       <!--전체 글 수-->
       <li>
-        📂 <b><span style="font-size:0.8rem;">전체 글 수 <span style="font-size:1.2rem; color : rgb(15, 123, 108);">{{sum}}</span> 개</span></b>
+        📂 <b><span style="font-size:0.8rem;">전체 글 수 <span
+              style="font-size:1.2rem; color : rgb(15, 123, 108);">{{sum}}</span> 개</span></b>
       </li>
 
       <!-- 카테고리 영역 시작 -->
@@ -42,6 +43,17 @@
           {% endfor %}
 
           {% for category in site.categories %}
+          {% if category[0] == "DesignPattern" %}
+          <li><a href="/categories/DesignPattern" class="nav__sub-title_sub">디자인패턴 ({{category[1].size}})</a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+
+
+        <!-- 기술 카테고리 -->
+        <span class="nav__sub-title">기술</span>
+        <ul>
+          {% for category in site.categories %}
           {% if category[0] == "Java" %}
           <li><a href="/categories/Java" class="nav__sub-title_sub">Java ({{category[1].size}})</a></li>
           {% endif %}
@@ -53,13 +65,14 @@
           {% endif %}
           {% endfor %}
 
-          {% for category in site.categories %}
-          {% if category[0] == "DesignPattern" %}
-          <li><a href="/categories/DesignPattern" class="nav__sub-title_sub">디자인패턴 ({{category[1].size}})</a></li>
-          {% endif %}
-          {% endfor %}
+          <li>
+            <a href="https://github.com/hanjo8813/Dev_Memo" class="nav__sub-title_sub" target="_blank">
+              Dev Memo (Repo)
+            </a>
+          </li>
 
         </ul>
+
 
         <!-- 코딩테스트 카테고리 -->
         <span class="nav__sub-title">코딩테스트</span>
@@ -77,6 +90,7 @@
           {% endfor %}
         </ul>
 
+
         <!-- 프로젝트 카테고리 -->
         <span class="nav__sub-title">프로젝트</span>
         <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열 여기가 소분류-->
@@ -90,7 +104,7 @@
           {% endfor %}
         </ul>
 
-        
+
 
         <!-- 기타등등 카테고리 
         <span class="nav__sub-title">기타등등</span>
