--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,7 +23,7 @@ layout: default
       <h1 id="page-title" class="page__title" style="padding:0.6rem 0 0.6rem 0;">
         {{ page.title }}
       </h1>
-      <hr>
+      <hr id="archive-hr">
     {% endunless %}
     {{ content }}
   </div>
