--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -6,15 +6,19 @@
   margin-top: 1em;
   margin-bottom: 2em;
 
+  // 아카이브페이지 왼쪽 여백
+  padding-left : 0.5em;
+  // margin-left : 5em;
+
   @include breakpoint($large) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
-    // padding-right: $right-sidebar-width-narrow;
+    padding-right: $right-sidebar-width-narrow;
   }
 
   @include breakpoint($x-large) {
     width: calc(100% - #{$right-sidebar-width});
-    // padding-right: $right-sidebar-width;
+    padding-right: $right-sidebar-width;
   }
 }
 
