--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -48,9 +48,12 @@ body {
   }
 
   .page__inner-wrap {
+    // 포스트 콘텐츠 wrapper 부분
+    padding-left : 0.5em;
+
     float: left;
-    margin-top: 1em;
-    margin-left: 0;
+    margin-top: 1.5em;
+    margin-left: 0em;
     margin-right: 0;
     width: 100%;
     clear: both;
