--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -59,3 +59,13 @@ $base0f: #b18a3d !default;
 .page__footer-follow .social-icons .svg-inline--fa  {
   color: inherit;
 }
+
+
+.sub_title{
+  font-size:0.8em;
+  color:gray; 
+  font-style:italic;
+  margin-bottom:7px;
+  margin-top:25px;
+  margin-left: 10px;
+}
