--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -104,14 +104,20 @@
 
 
         <!-- 프로젝트 카테고리 -->
-        <span class="nav__sub-title">프로젝트</span>
+        <span class="nav__sub-title">회고</span>
         <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열 여기가 소분류-->
         <ul>
           <!-- 카테고리 글들을 모아둔 페이지인 /categories/(카테고리 대분류) 주소의 글로 링크 연결-->
           <!--category[1].size 로 해당 카테고리를 가진 글의 개수 표시-->
           {% for category in site.categories %}
-          {% if category[0] == "PG" %}
-          <li><a href="/categories/pg" class="nav__sub-title_sub">Please Graduate ({{category[1].size}})</a></li>
+          {% if category[0] == "project" %}
+          <li><a href="/categories/project" class="nav__sub-title_sub">프로젝트 ({{category[1].size}})</a></li>
+          {% endif %}
+          {% endfor %}
+
+          {% for category in site.categories %}
+          {% if category[0] == "me" %}
+          <li><a href="/categories/me" class="nav__sub-title_sub">개인 ({{category[1].size}})</a></li>
           {% endif %}
           {% endfor %}
         </ul>
