--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,6 @@
 {% if page.author_profile or layout.author_profile or page.sidebar %}
-<div class="sidebar sticky">
+<!-- 왼쪽 사이드바 패딩 줌 -->
+<div class="sidebar sticky" style="padding-right:50px">
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
   {% if page.sidebar %}
   {% for s in page.sidebar %}
