--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -49,7 +49,7 @@ body {
 
   .page__inner-wrap {
     // 포스트 콘텐츠 wrapper 부분
-    // padding-left : 0.5em;
+    padding-left : 0.5em;
 
     float: left;
     margin-top: 1.5em;
