--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -138,6 +138,17 @@
       </li>
     </ul>
   </nav>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K5BTPZ52C"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4K5BTPZ52C');
+  </script>
+  
   {% endif %}
 
 </div>
