--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,3 +40,12 @@
 
   </body>
 </html>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K5BTPZ52C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'G-4K5BTPZ52C');
+</script>
