--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -103,9 +103,8 @@
           {% endfor %}
         </ul>
 
-
-        <!-- 프로젝트 카테고리 -->
-        <span class="nav__sub-title">회고</span>
+        <!-- 기록 카테고리 -->
+        <span class="nav__sub-title">기록</span>
         <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열 여기가 소분류-->
         <ul>
           <!-- 카테고리 글들을 모아둔 페이지인 /categories/(카테고리 대분류) 주소의 글로 링크 연결-->
@@ -117,24 +116,12 @@
           {% endfor %}
 
           {% for category in site.categories %}
-          {% if category[0] == "me" %}
-          <li><a href="/categories/me" class="nav__sub-title_sub">개인 ({{category[1].size}})</a></li>
+          {% if category[0] == "review" %}
+          <li><a href="/categories/review" class="nav__sub-title_sub">회고 ({{category[1].size}})</a></li>
           {% endif %}
           {% endfor %}
         </ul>
 
-
-
-        <!-- 기타등등 카테고리 
-        <span class="nav__sub-title">기타등등</span>
-        <ul>
-          {% for category in site.categories %}
-          {% if category[0] == "Programmers" %}
-          <li><a href="/categories/programmers" class="nav__sub-title_sub">프로그래머스 ({{category[1].size}})</a></li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-        -->
       </li>
     </ul>
   </nav>
